Add jlink support
Closes #49